--- a/javascript/apis/document-manipulation/shopping-list.html
+++ b/javascript/apis/document-manipulation/shopping-list.html
@@ -31,7 +31,34 @@
     </ul>
 
     <script>
+      const list = document.querySelector("ul");
+      const input = document.querySelector("input");
+      const button = document.querySelector("button");
 
+      button.addEventListener('click', function() {
+        event.preventDefault();
+
+        const currentInputElement = input.value;
+        input.value = '';
+
+        const listItem = document.createElement("li");
+        const span = document.createElement("span");
+        const deleteButton = document.createElement("button");
+        
+        listItem.appendChild(span);
+        listItem.appendChild(deleteButton);
+
+        span.textContent = currentInputElement;
+        deleteButton.textContent = "Delete";
+
+        list.appendChild(listItem);
+
+        deleteButton.addEventListener('click', function() {
+          listItem.remove();
+        });
+
+        input.focus();
+      });
     </script>
   </body>
 </html>
